--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.13",
+    "@types/dat.gui": "^0.7.12",
     "@types/three": "^0.160.0",
+    "dat.gui": "^0.7.9",
     "maath": "^0.10.7",
     "next": "14.0.4",
     "r3f-perf": "^7.1.2",
