Add gsap animation to Window_Shutters_Closed

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/dat.gui": "^0.7.12",
     "@types/three": "^0.160.0",
     "dat.gui": "^0.7.9",
+    "gsap": "^3.12.4",
     "maath": "^0.10.7",
     "next": "14.0.4",
     "r3f-perf": "^7.1.2",
