--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.160.0",
     "dat.gui": "^0.7.9",
     "gsap": "^3.12.4",
+    "leva": "^0.9.35",
     "maath": "^0.10.7",
     "next": "14.0.4",
     "r3f-perf": "^7.1.2",
