--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.13",
+    "@react-three/postprocessing": "^2.15.12",
     "@types/dat.gui": "^0.7.12",
     "@types/three": "^0.160.0",
     "dat.gui": "^0.7.9",
