--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "three": "^0.161.0",
     "three-stdlib": "^2.29.1"
   },
