--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gsap": "^3.12.4",
     "leva": "^0.9.35",
     "maath": "^0.10.7",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "r3f-perf": "^7.1.2",
     "react": "^18",
     "react-calendar": "^4.8.0",
