--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "three": "^0.161.0",
     "three-stdlib": "^2.29.1"
   },
