--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "three": "^0.161.0",
     "three-stdlib": "^2.29.1"
   },
